cmake_minimum_required(VERSION 2.8.9)
project(Hyperspace-Visualization)
find_package(PkgConfig REQUIRED)
pkg_search_module(GLFW REQUIRED glfw3)
pkg_search_module(GLEW REQUIRED glew)
include_directories(${GLFW_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS})
add_executable(main src/main.cpp)
target_link_libraries(main ${GLFW_STATIC_LIBRARIES} ${GLEW_LIBRARIES})
